toggling done and not done as id

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,3 +22,26 @@ input{
   border-bottom: 1px solid #2c3e50;
   padding: 5px;
 }
+
+.task{
+  background-color: #34495e;
+  padding: 15px;
+  margin: 5px;
+  list-style: none;
+  border-radius: 5px;
+  cursor: pointer;
+
+}
+
+.task span{
+  color: white;
+}
+
+.icon{
+  float: right;
+  margin-right: 20px;
+}
+
+article{
+  display: grid;
+}
