added remove all todo button

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,3 +71,10 @@ article{
   color: #fff;
   background-color: #6c6777;
 }
+
+.button.clear{
+  float: right;
+  color: white;
+  background-color: red;
+  width: 170px;
+}
